--- a/src/components/pages/AboutMe.css
+++ b/src/components/pages/AboutMe.css
@@ -1,14 +1,17 @@
 .section {
     padding: 2rem 3rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .section--presentation {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     align-items: center;
     justify-content: center;
-    
 }
+
 @media (min-width: 768px) {
     .section--presentation {
         display: grid;
@@ -32,4 +35,7 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
+}
+.studies {
+    flex-grow: 1;
 }
