--- a/src/components/pages/Skills.css
+++ b/src/components/pages/Skills.css
@@ -1,6 +1,7 @@
 .section--skills {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     gap: 1.6rem;
     margin-top: 2.4rem;
 }
